<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sfgui_vendor</name>
  <version>0.4.0</version>
  <description>Vendor wrapper package for SFGUI</description>
  <maintainer email="josh@electrifiedautnomy.com">Josh Whitley</maintainer>
  <license>Zlib</license>
  <author>Stefan Schindler</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <build_depend>sfml-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
